Added spec template
